improved single tap view toggling on full image.

--- a/Unroll2/Info.plist
+++ b/Unroll2/Info.plist
@@ -18,6 +18,8 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>CFBundleDisplayName</key>
 	<string>Photo Notes</string>
 	<key>CFBundleVersion</key>
