Set consistent view colors throughout, fixed some bugs with new popovers.  Camera permission for iOS 10 installed.

--- a/Unroll2/Info.plist
+++ b/Unroll2/Info.plist
@@ -44,5 +44,7 @@
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To import photos from your existing photo collection, please allow access for Photo Notes.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>To take new photos directly from Photo Notes, please allow access to the camera.</string>
 </dict>
 </plist>
