--- a/Unroll2/Info.plist
+++ b/Unroll2/Info.plist
@@ -46,5 +46,24 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>CameraIcon</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>com.Desdinova.Unroll2.OpenCamera</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Open Camera</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>QNCompose</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>com.Desdinova.Unroll2.QuickNote</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Open QuickNote</string>
+		</dict>
+	</array>
 </dict>
 </plist>
